# enumeration

./: .gitignore  Cargo.toml
enumeration/: Cargo.toml
enumeration-derive/src/: lib.rs
enumeration/src/: enum_trait.rs  lib.rs  map.rs  optionable.rs  set.rs  wordlike.rs
enumeration/src/enum_trait/: enum_trait.rs
enumeration/src/enumerate/: enum_trait.rs  iter.rs  mod.rs
enumeration/src/external_trait_impls/: serde.rs
enumeration/src/map/: entry.rs  enum_map.rs  iter.rs  mod.rs
enumeration/src/set/: enum_set.rs  iter.rs  mod.rs
enumeration_derive/: Cargo.toml
enumeration_derive/src/: lib.rs
src/: lib.rs  map.rs  set.rs
src/external_trait_impls/: serde.rs
