[package]
name = "enumeration"
version = "0.5.3"
edition = "2021"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
publish = false
description = "Enumerable enums with bitwise representation"
repository = "https://github.com/jnbooth/enumeration"

[dependencies]
enumeration_derive = { path = "../enumeration_derive", optional = true }
serde = { version = "1.0.137", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = ["derive", "inline-more"]

derive = ["enumeration_derive"]
# Enables usage of `#[inline]` on far more functions than by default in this
# crate. This may lead to a performance increase but often comes at a compile
# time cost.
inline-more = []
