[package]
name = "enumeration_derive"
version = "0.4.2"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0.80", features = ["full"] }
proc-macro2 = "1.0.30"

[features]
default = ["inline"]

# Sets #[inline] on derived Enum implementations.
inline = []
