[package]
name = "enumeration_derive"
version = "0.8.0"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote = "1.0"
syn = { version = "1.0.80", features = ["full"] }
proc-macro2 = "1.0.30"

[features]
default = ["inline"]

# Sets #[inline] on derived Enum implementations.
inline = []
